Fix Layout Issues in the Domain Block.

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,10 @@ h3 {
 p {
   margin-top: 0;
 }
+
+.header {
+  padding: 1rem;
+}
 @media screen and (max-width: 340px) {
   html {
     font-size: 50%;
@@ -357,6 +361,7 @@ a {
 .input-group .input {
   border: 0;
   flex-grow: 1;
+  width: 0;
 }
 
 .input-group .btn {
@@ -751,6 +756,10 @@ a {
   transform: translateY(8px);
 }
 
+.nav__logo > img {
+  width: 100%;
+}
+
 .nav__list {
   width: 100%;
   margin: 0;
@@ -787,6 +796,12 @@ a {
   border-radius: 5px;
 }
 
+@media screen and (max-width: 350px) {
+  .nav__logo {
+    width: 80%;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .nav__logo {
     transform: translateY(5px);
@@ -804,8 +819,11 @@ a {
     width: auto;
   }
 
-  .nav__item > a {
+  .nav__item {
     border: 0;
+  }
+
+  .nav__item > a {
     color: #d2d0db;
     transition: color 0.5s;
   }
@@ -854,6 +872,9 @@ a {
   margin: 4rem auto;
 }
 
+.block-domain .btn {
+  padding: 2rem 4vw;
+}
 .block-domain__subtitle,
 .block-domain .input-group {
   max-width: 67rem;
@@ -863,6 +884,7 @@ a {
   display: grid;
   font-size: 2rem;
   font-weight: 600;
+  color: var(--color-headings);
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 6rem);
   justify-items: center;
@@ -870,24 +892,9 @@ a {
   max-width: 75rem;
 }
 
-/* TODO: fix the layout issue for small screens */
 @media screen and (max-width: 550px) {
   .block-domain__prices {
     grid-template-columns: repeat(2, 1fr);
-  }
-
-  ::placeholder {
-    font-size: 50%;
-  }
-
-  .block-domain .btn {
-    border-radius: 50%;
-    overflow: hidden;
-    padding: 1.5rem;
-  }
-
-  .block-domain .btn__search-text {
-    display: none;
   }
 }
 
@@ -895,6 +902,12 @@ a {
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .block-domain .btn {
+    padding: 2rem 6rem;
   }
 }
 
